committed by cx

--- a/_posts/2020-06-04-1崔娃的視頻.md
+++ b/_posts/2020-06-04-1崔娃的視頻.md
@@ -10,13 +10,23 @@ title: "剛才看了崔娃剖析美國黑人抗議原委的b站視頻"
 
 
 剛才看了崔娃剖析美國黑人抗議原委的b站視頻 講的太好了
+&nbsp;
 前幾天聽朋友說美國燒成一片時 覺得沒什麼 心想不就是種族歧視那點事麼
+&nbsp;
 看了視頻 基本瞭解了其中的原委 同時覺得他說的很多也適合中國
+&nbsp;
 比如我們平時在微博看到那麼多"新聞" 
+&nbsp;
 比如我們看到拾荒老人被人拖拽的視頻 所有人都會憤怒
-我們也表達憤怒 通過轉發微博 但也僅此而已 我們宣洩情感的方式就是發微博 轉微博 我們的情感宣洩的高潮就是那條微博在一個小時內就有幾千幾萬的轉發
+&nbsp;
+我們也表達憤怒 通過轉發微博 但也僅此而已 我們宣洩情感的方式就是發微博 轉微博 
+&nbsp;
+我們的情感宣洩的高潮就是那條微博在一個小時內就有幾千幾萬的轉發
+&nbsp;
 說到"社會" 說到"契約" 感覺在國內連這兩個詞都不適用 我從沒感到我是在遵守契約而"他們"打破了契約所以我無力我憤怒
+&nbsp;
 我只覺得我是在接受現實 頂多轉發一下
+&nbsp;
 羡慕他們
 
 2020.6
