committed by cx

--- a/_posts/2020-09-10-過幾天要做一個手術.md
+++ b/_posts/2020-09-10-過幾天要做一個手術.md
@@ -10,9 +10,7 @@ title: "過幾天要做一個手術 "
 
 過幾天要做一個手術，牙的根尖囊腫。貌似根尖囊腫嚴重了會觸及到大腦裡面的神經，導致頭疼等症狀。
 
-現在我想，希望我的渾身無力、精神渙散、嗜睡、社交恐懼等等症狀都是源自這個牙的根尖囊腫。這樣，等手術完，治好了根尖囊腫，我的一切精神問題也就解決了。
-
-我很希望自己的精神問題（如果可以說它們是問題）其實是身體、生理問題。只靠我自己的精神，它已經形成徹底的閉環，我沒法打破它，只會自己跟自己無限兜圈子。
+現在我想，希望我一直以來找不清原因的種種精神問題都是源自這個牙的根尖囊腫。這樣，等手術完，治好了根尖囊腫，就一切都好了，一切都會好起來。
 
 9.10
 
