committed by cx

--- a/_posts/2020-12-30-關於送外賣.md
+++ b/_posts/2020-12-30-關於送外賣.md
@@ -30,6 +30,32 @@ title: "關於送外賣 "
 
 9.10
 
+——————————————————
+
+昨天寫了第二篇。剛才一不小心被我刪掉了。還是一次性寫完吧。寫的簡潔一些。就像說話那樣寫，可說話能簡潔得了嗎？
+
+那天，我騎車來到餓了麼茂名南路站。這個站實際是在進賢路。後來我才發現，這條路我以前來過至少兩次，因為那條路上的南蠻子雲南菜館我去過兩次。
+
+進了房間，有兩個特別胖的男人隔著桌子相對而坐，有電腦，左邊那個尤其胖，用是機械鍵盤，聽聲音應該是青軸的。不過他並不用電腦玩遊戲。他玩的是手機上的和平精英（吃雞）。後來我明白了，他是調度，需要頻道跟騎手交流，電腦操作很多。
+
+另一個是站長，看起來也更有範兒。他跟我講的基本情況。說只要能放下身段，幹這個還是能賺到錢的。有不少都是幹一段時間攢了一些錢，就去幹別的，幹成了也就成了，幹不成，一兩年後又會給他打電話，回來繼續幹外賣。
+
+我跟他說我的初衷就是為了自己有個保底的。這個如果能幹得了，其他我就不怕了。大不了回來繼續幹外賣唄。
+
+我到的那天的之前幾天，有一天一次性來了三個小伙子。其中兩個幹了一天就走了。他對他們印象很不好。他說，用他女兒的話說就是，那些人是「啥也不是」。
+
+從一開始我就看出來他倆是東北人。「啥也不是」也是東北人批評人比較重的時候常用的說法。
+
+站長本想讓我繼續用其中一個走掉的小伙子留下的電動車，但因為對方已經進入工廠做工，手機信號不好，沒法讓我登陸相應的app，也就算了。第二天，我自己到站長推薦的租車點。租車點的老闆娘雷厲風行，嘁呎咔嚓就幫我弄完了租車和租電池。下午我先跟一個跑了一個月的前輩跑了一單，然後就是自己跑了。每接一單，我就點一下「小休」，也就是暫停接單。跑完一單再重新點擊上線。下午3點到5點回家做飯吃飯，晚上再跑一陣，八九點收工。第一天跑了七八單。
+
+騎在路上感覺很嗨。我租的電池是60伏的，速度很快，在路上比我快的電動車不多，基本都是其他騎手。
+
+等紅綠燈的時候，我會儘量鑽到最前面，啟動之後，就在所有車的前面，前方沒有障礙，騎著很順暢，不用顧及前方車輛的往前全速猛充，感覺很爽的。
+
+感覺自己真的成了「騎手」。或者說「騎士」。很自由。很灑脫。騎在路上，有很多浪漫的聯想。上海的最中心，四處流竄著的一大批騎手，交警沒法規制他們，他們像一個個群落，每個群落有一個小中心，發散式的滲透進城市裡的每一個角落，每一戶人家，每一個樓層。他們是最自由的那種遊牧民族。大城市裡的唯一的遊牧民族。
+
+9.22
+
 
 
 
