--- a/_posts/2018-10-22-流水账日记·生活的量.md
+++ b/_posts/2018-10-22-流水账日记·生活的量.md
@@ -12,6 +12,6 @@ title: "流水账日记·生活的量"
 
 前天晚上试着把日记写成流水账的形式，发现自己生活的量好大，各种乱七八糟有的没的，事情那么多，远远超出自己的印象。没什么正事儿，但数量很大，远比自己以为的自己在做更多得多的事
 
-それを誇りに思える！
+それを誇りに思え！
 
 2018.10.19
