committed by cx

--- a/_posts/2020-10-28-しゃべくり００７ （閒聊零零七）.md
+++ b/_posts/2020-10-28-しゃべくり００７ （閒聊零零七）.md
@@ -13,29 +13,29 @@ title: "しゃべくり００７ （閒聊零零七）"
 那我就自己一個人干聊。就當這是個文字版的播客，就當我是在說話，反正我打字的速度跟說話差不了多少的。別嫌我文字風格啰嗦，因為這就是現場說出來的話，原封不動錄入為文字。
 
 しゃべくり００７在國內最多的譯名是閒聊零零七，しゃべくり可能更重一點，有一些「亂侃」的意味。
-這個綜藝節目，是我自己最喜歡的綜藝節目，沒有之一。關於這個節目，或許可以嘮叨啰嗦很多，這裡只把我認為最主要的寫一下。
-它對我來說，最大的意義是對人的觀察，相當於日語裡的人間観察。看慣了しゃべくり００７，在看同一個嘉賓作為嘉賓參加別的綜藝節目時的狀態，明顯會感覺到不同。由於某種說不清的魔力，這個節目被寬容的程度似乎大於其他綜藝節目。尺度，會不自覺地放大。這裡說的尺度主要指藝人所屬的事務所對藝人表現的尺度。
-結果就是，在這個節目里能看到很多在其他節目里看不到的東西。看慣了這個，再看別的，會覺得太清淡了，太一板正經了。
+<br>這個綜藝節目，是我自己最喜歡的綜藝節目，沒有之一。關於這個節目，或許可以嘮叨啰嗦很多，這裡只把我認為最主要的寫一下。
+<br>它對我來說，最大的意義是對人的觀察，相當於日語裡的人間観察。看慣了しゃべくり００７，在看同一個嘉賓作為嘉賓參加別的綜藝節目時的狀態，明顯會感覺到不同。由於某種說不清的魔力，這個節目被寬容的程度似乎大於其他綜藝節目。尺度，會不自覺地放大。這裡說的尺度主要指藝人所屬的事務所對藝人表現的尺度。
+<br>結果就是，在這個節目里能看到很多在其他節目里看不到的東西。看慣了這個，再看別的，會覺得太清淡了，太一板正經了。
 
 它最大的魅力，就來源於它不太受控制，比較容易「失控」。當然，能被播放出來的，肯定不會是過於失控的，但它「不控制」、「放縱失控」的基本姿態，會讓它產生更多突發發展，更多可勉強被接受的（可以播出的）「小型失控」。
-在我看來，這是現代綜藝節目最大的先進之處。即，完全放開的即興，和精妙無比的剪輯，外加極具匠心的鏡頭語言。
-我對這些感到很親切，因為我的攝影創作完全就是這樣的。或者說，我這種類型的攝影作品製作者，都是這樣工作的。甚至於，所有包含有「剪輯」這一步驟的藝術創作的基本工作範式就是這樣的。
-所以到後來我看しゃべくり００７時就是在看一個作品。
+<br>在我看來，這是現代綜藝節目最大的先進之處。即，完全放開的即興，和精妙無比的剪輯，外加極具匠心的鏡頭語言。
+<br>我對這些感到很親切，因為我的攝影創作完全就是這樣的。或者說，我這種類型的攝影作品製作者，都是這樣工作的。甚至於，所有包含有「剪輯」這一步驟的藝術創作的基本工作範式就是這樣的。
+<br>所以到後來我看しゃべくり００７時就是在看一個作品。
 
 不過，它跟藝術創作不同的是，藝術創作的可控性比它要大很多。
-某種角度上說，它厲害就厲害在，它的可控性比藝術創作低得多。相反，如果它是可控的，事先寫好劇本的，那麼它完全可以做成某種藝術作品，不過它也就不是它了，因為有了劇本也就不可能產生那麼多失控。
-簡單地說，就是主持人跟嘉賓的關係。嘉賓是活生生的人，這跟拍電影不一樣，主持人和其他六個人，只能引導，引誘，誘導。
+<br>某種角度上說，它厲害就厲害在，它的可控性比藝術創作低得多。相反，如果它是可控的，事先寫好劇本的，那麼它完全可以做成某種藝術作品，不過它也就不是它了，因為有了劇本也就不可能產生那麼多失控。
+<br>簡單地說，就是主持人跟嘉賓的關係。嘉賓是活生生的人，這跟拍電影不一樣，主持人和其他六個人，只能引導，引誘，誘導。
 
 嘉賓所占的分量更重：這是個以嘉賓為中心的談話節目，當然，這種談話節目浩如繁星，可這個節目中嘉賓所佔分量的「質感」與其他嘉賓談話節目不同。
-比如，一般的談話節目，主持人基本上跟嘉賓是對等關係，甚至，主持人是前輩，因為如果不到一定資歷，也做不了這種談話節目的主持人。而しゃべくり００７則給人一種感覺，七個人就像七個陪酒牛郎，在圍著嘉賓繞著嘉賓為嘉賓服務，當然，這些本質上都是為了搞笑，為了節目本身的呈現效果，但這種「捧著」嘉賓的感覺，會讓嘉賓所佔的分量更重。一期節目的收看效果如何，很大程度上取決於嘉賓的性格，氣質，與七個人之間的電波。而這又是不可預測的。
+<br>比如，一般的談話節目，主持人基本上跟嘉賓是對等關係，甚至，主持人是前輩，因為如果不到一定資歷，也做不了這種談話節目的主持人。而しゃべくり００７則給人一種感覺，七個人就像七個陪酒牛郎，在圍著嘉賓繞著嘉賓為嘉賓服務，當然，這些本質上都是為了搞笑，為了節目本身的呈現效果，但這種「捧著」嘉賓的感覺，會讓嘉賓所佔的分量更重。一期節目的收看效果如何，很大程度上取決於嘉賓的性格，氣質，與七個人之間的電波。而這又是不可預測的。
 
 工作人員所佔的分量不可忽視。每一期都會針對嘉賓的情況做一個針對性的企劃，而每一期的企劃，大概從節目開播兩三年左右開始，變得越來越用心，精緻。能感覺到製作團隊在企劃上花了極大的心力物力財力。這也是現代綜藝節目讓我感歎的一點：它的複雜程度已經直逼電影製作，早已超出了傳統的單一作者加編輯者的程度。
-七個主持人，這種設定本身就已經很複雜；嘉賓，可能還不止一個，可能同時多個；企劃，工作人員事先的充分準備；導演，工作人員的現場調度；攝影，好的攝影和調度為節目呈現效果帶來的增色不可估量；剪輯，同理；字幕、配樂，同理。每一個環節，都在為節目的最終呈現增色，所有環節疊加在一起，達到的效果不是任何傳統電視節目可以比擬的。
+<br>七個主持人，這種設定本身就已經很複雜；嘉賓，可能還不止一個，可能同時多個；企劃，工作人員事先的充分準備；導演，工作人員的現場調度；攝影，好的攝影和調度為節目呈現效果帶來的增色不可估量；剪輯，同理；字幕、配樂，同理。每一個環節，都在為節目的最終呈現增色，所有環節疊加在一起，達到的效果不是任何傳統電視節目可以比擬的。
 
 每一期的嘉賓都在給這個節目添加新血，這跟談話節目每一期有不同的嘉賓來談話還不一樣。這個節目裡的嘉賓參與進來，更多不是在消費他自己的情況，儘管會問他問題他也會回答，但大家所有人包括觀眾都知道，這些問答不是這個節目的目的，而是為了發展出其他不一樣的「意外情形」，大家都在等待那個「爆發點」。嘉賓參與進來，消費的是他這個人本身的特質，以及他與七個主持人之間可能出現的火花，以及所有人都沒料想到的嘉賓的不為人知甚至不為自己知的「另外一面」。
-這也是這個節目能夠永久做下去的動力來源。
-從某個較為本質的層面上說，幾乎所有綜藝節目都是在消費現成的東西，而不是製造出新東西（這種綜藝或許也有，但應該是占少數）。而日本最不缺的就是藝人。我甚至懷疑，哪怕不是什麼知名藝人，哪怕隨便扔一個人上去，在這七個主持人的料理之下，也很有可能做出有意思的節目。
-其實它就相當於拉嘉賓進來，跟七個人一起組成一個臨時的搞笑藝人組合，企劃呢，就是這一期節目我們這個組合要上台表演的節目，這個節目是半即興的。能做到這一點的，目前可能只有しゃべくり００７這一個節目吧。其他節目，嘉賓始終還是保持著「嘉賓」的位置，大家對嘉賓最終還是客氣的，人家是嘉賓嘛，嘉賓的「參與度」沒這麼深。在這裡，嘉賓到後面就不怎麼像「嘉賓」了。反而像是淪為了為了搞笑而強行啟用的道具（不是貶義）。
+<br>這也是這個節目能夠永久做下去的動力來源。
+<br>從某個較為本質的層面上說，幾乎所有綜藝節目都是在消費現成的東西，而不是製造出新東西（這種綜藝或許也有，但應該是占少數）。而日本最不缺的就是藝人。我甚至懷疑，哪怕不是什麼知名藝人，哪怕隨便扔一個人上去，在這七個主持人的料理之下，也很有可能做出有意思的節目。
+<br>其實它就相當於拉嘉賓進來，跟七個人一起組成一個臨時的搞笑藝人組合，企劃呢，就是這一期節目我們這個組合要上台表演的節目，這個節目是半即興的。能做到這一點的，目前可能只有しゃべくり００７這一個節目吧。其他節目，嘉賓始終還是保持著「嘉賓」的位置，大家對嘉賓最終還是客氣的，人家是嘉賓嘛，嘉賓的「參與度」沒這麼深。在這裡，嘉賓到後面就不怎麼像「嘉賓」了。反而像是淪為了為了搞笑而強行啟用的道具（不是貶義）。
 
 看久了，主持人們、嘉賓說話的方式也給我影響，這裡就不詳細說了。我總感覺到，我的聊天技巧的絕大部分都是從這個節目中學來的，雖然我只能生搬硬套難以舉一反三，畢竟才華幽默感都不在一個量級。不過，「聊天是需要控制的」這個道理，我是從蔡康永那裡學來了態度，從這個節目里受到了熏陶。
 
