committed by cx

--- a/_posts/2020-11-01-「東北亞要被收購了，名字也會改掉，最近在大甩賣，小衫兒三十五十的」.md
+++ b/_posts/2020-11-01-「東北亞要被收購了，名字也會改掉，最近在大甩賣，小衫兒三十五十的」.md
@@ -24,7 +24,7 @@ title: "「東北亞要被收購了，名字也會改掉，最近在大甩賣，
 和它隔街相望，大世界。顯然，這名字就是在針對東北亞。你不是東北亞嗎，我可是大世界。
 <br>不得不說，那個年代，人們似乎比現在更自信，對未來，對遠方，有更多更多嚮往。身在小鶴崗，心有大世界。這可能真不只是一句俏皮話。他們心中可能真的有個大世界。那個年代，世界還很大。我很懷念那氛圍。
 <br>★<br>
-前天跟朋友商討，想把我的gong眾hao改個名字，現在用的是我的原名，之前改成自己的原名，一是想不到好聽的名字，二是只想把它當做發表個人作品的平台。現在想法改了，想發文章。
-<br>最後商討的結果，也是回到鶴崗，在離東北亞和大世界不遠的地方，有個轉盤道，轉盤道的中間有個大金球（朋友的說法）。我的gong眾hao就將改名為大金球。東北亞可以被收購，可以被改名，但我們命名的大金球永遠存在。
+前天跟朋友商討，想把我的公眾號改個名字，現在用的是我的原名，之前改成自己的原名，一是想不到好聽的名字，二是只想把它當做發表個人作品的平台。現在想法改了，想發文章。
+<br>最後商討的結果，也是回到鶴崗，在離東北亞和大世界不遠的地方，有個轉盤道，轉盤道的中間有個大金球（朋友的說法）。我的公眾號就將改名為大金球。東北亞可以被收購，可以被改名，但我們命名的大金球永遠存在。
 
 2020.10.28
