committed by cx

--- a/_posts/2019-10-05-朋友的兔子每次都要從圍欄裡跑出來.md
+++ b/_posts/2019-10-05-朋友的兔子每次都要從圍欄裡跑出來.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "朋友的兔子每次都要從圍欄裡跑出來，"
+title: "朋友的兔子每次都要從圍欄裡跑出來"
 ---
 
   
@@ -10,7 +10,7 @@ title: "朋友的兔子每次都要從圍欄裡跑出來，"
 
 朋友的兔子每次都要從圍欄裡跑出來，剛才它又跑出去被趕了回來，回來在圍欄附近跑來跑去，它跑到哪裡小鴨子就跟到哪裡，它們就這樣跑跑吃吃，我們就這樣看著它們。不知道這樣的光景還能持續多久 ​​​​
 
-——————————————————
+—
 
 每次聽到那個長不大的小鴨子拼命叫，我就知道是兔子又跑掉了，它又找不到它了 ​​​​
 
