--- a/_posts/2019-11-27-朋友.md
+++ b/_posts/2019-11-27-朋友.md
@@ -13,3 +13,21 @@ title: "朋友"
 今天見了個兩年沒聯繫的朋友。之前也有過類似的情況：我的時間是停滯的，朋友的時間是往前走的，所以再見面時，就會有兩年的時間差。我在朋友眼中，是個兩年前關係已結束的人。朋友在我眼中，停留在兩年前。所以再見面時，我的知覺跟不上現實，總覺得哪裡出了什麼誤差：咦，這個人怎麼突然變成這樣了
 
 2019.11.27
+
+★                ★                ★                ★                ★
+
+◯◯◯想長大 · 我不想
+
+—
+
+去年年末，時隔幾年，重新見到過去一個朋友，之前我們友情的結束於她把我的微信刪了。
+
+這次見面，她依然感到我始終停留在小孩子的那些問題，比如與父母的關係之類的，為一些無聊的問題糾結。她很看不上這樣子的我。我的人生沒有任何成長。
+
+這我自己也知道。
+
+我似乎就是不想長大，所以才一直沒有長大的。
+
+至於為什麽不想長大，這我也不知道。我只知道，因為我一直沒有長大，當我的朋友長大了，我就會失去這些朋友
+
+2020.10.29
