committed by cx

--- a/_posts/2020-11-09-開展.md
+++ b/_posts/2020-11-09-開展.md
@@ -10,13 +10,13 @@ title: "開展"
 
 每天都是晚上洗完澡才感覺一天開始了。
 
-<center>★&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp★&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp★</center>
+<center>★&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★</center>
 
 昨天展覽開展了。完整看到了展覽全貌。關於自己展出的照片，最大的感觸是它們的實體存在。我自己是第一次以這種形式感受自己拍的照片。照片貼在墻上，跟存放在網絡上，是兩種根本不同的存在方式。我的餘光，我的身體，能感覺到它們 在 那 裏 。即使我不去看它們。
 
 晚上跟大家去吃飯，雖然自己看起來很傻，雖然幾乎每個人都不認識，但也挺開心。不管怎麽說，大家算是某個大範圍上的 自 己 人 ，即使尷尬，也挺溫馨。
 
-<center>★&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp★&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp★</center>
+<center>★&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★</center>
 
 今天回到自己的生活，收拾房間，擦地洗衣服洗床單，然後就無事可做了。明天，但願明天可以鼓起勇氣
 
