committed by cx

--- a/_posts/2021-11-21-這個博客已經一年沒寫了。一年更新一次好像也不錯。這一年主要發生了兩件事。啊，三件事。.md
+++ b/_posts/2021-11-21-這個博客已經一年沒寫了。一年更新一次好像也不錯。這一年主要發生了兩件事。啊，三件事。.md
@@ -1,10 +1,37 @@
 ---
 layout: post
-title: ""
+title: "這個博客已經一年沒寫了。一年更新一次好像也不錯。這一年主要發生了兩件事。啊，三件事。"
 ---
 
   
 &nbsp;
 &nbsp;
 
+這個博客已經一年沒寫了。一年更新一次好像也不錯。這一年主要發生了兩件事。啊，三件事。
+一件是開始做日語老師，網絡一對一教學。這個工作挺適合自己。時間的安排可以比較自由，我都安排在了下午和晚上。
+年初的時候就知道了有這類工作可以做，但爲了面試時有把握，準備了很久。一直沒勇氣。那段時間下載了HelloTalk，在上面认识了两个日本朋友。还在上面用日语写了很多文字，作爲日語練習。
+後來終於鼓起勇氣，參加了面試，然後通過了。
+這個一對一網絡教學的工作，可以讓我跟學生保持一定的距離感，也讓我可以對上課維持一些新鮮感，因爲面對不同學生可以用不同的教法，每個學生的教材和上課進度也不一樣。剛開始的時候，對學生的控制慾還比較強，不自覺的進入一種「熱血教師」的角色，後來漸漸適應摸索到了與學生的合適的相處方式。
 
+第二件事是大概七八月份的時候，開始整理照片。還是之前的『有顏色的風景』那一批照片。開始整理照片之前這幾個月，除了日語相關，幾乎所有時間我都用在了荒野亂鬥這個遊戲上。年初跟前前女友分開后，我迷上了荒野亂鬥裏面的吃雞模式，中文叫荒野決鬥模式。這個模式分單人和雙人，我只玩單人的。每一局有10個玩家參加，在一個比較大的地圖裏，活到最後的那個勝出，贏得的獎盃最多。其他按排名獲得或扣除相應的獎盃。
+這個遊戲（模式）讓我着迷的地方是它的複雜性。另外也跟我自己過去的某些（弱者）情結有關。
+那段時間，我把自己的生活，生活目標寄託在荒野亂鬥上。我想把所有的英雄的獎盃數都打到750。
+不過這個目標沒能讓我擺脫某種空虛、虛無。
+後來開始看小說。看的並不多，但至少幫我轉移了一部分注意力，把注意轉移到小說的故事的世界中去。
+
+然後終於開始重新整理照片。還是那批照片。它們在我心裏始終是一個坎。有兩次，我試圖徹底把它們整理完，開始下一個人生階段。但那個坎還是在。這次終於要邁過去了。
+這之前，我用實際行動告別攝影也有大半年了。重新面對這些照片之後，我發現我對的攝影的態度，攝影之於我的意義，都有變化。它對於我來說不再是個需要完成的任務，不再是個負擔，需要努力推脫擺脫的負擔。而是連接我與外部世界的紐帶。（既此我對攝影不再像以前一直以來的那样是嫌棄，我開始變得感謝它。（这或许是这辈子我第一次对某个东西产生「感恩」这种情感。））重新開始看那些照片后，我發現我似乎終於脫離了那種幾乎讓我窒息的自閉狀態。我終於又開始「看」這個世界了。而這一次的看，不只是視覺上的。我開始在腦海裏講故事。雖然沒有具體的故事可講，但面對一張張具體的照片，照片中具體的事物，我的思維似乎被活躍起來了。似乎每一張照片我看了都會有些想說的感想，儘管大部分是重複的，但偶爾也有新的發現。這次我不再是把它們當作攝影作品去看，而是當作一個個具體的個體去看。當然，感想中的很多都是跟攝影有關的感想，但此外也會想到很多其他更世俗的東西，各種各樣的感想。
+漸漸的，我似乎知道了我接下來可以做的是什麼。「就照片進行“頭腦風暴”並給出感想」，是我可以做的一件事。照片承載了我無處安放的過剩的表達欲，或者更準確的說，敘述欲，說話的慾望。說的內容是什麼不重要，重要的是『說』這個動作。而我有足夠多的照片供我頭腦風暴。照片真是個最適合發散思維的載體。它有足夠的開放性，又提供足夠強烈的對神經的刺激，又有無限的多樣性。完美匹配我的需求。
+這是種什麼體裁不重要。反正我也無法滿足於單一一個體裁的表達。
+
+九月的時候談了一次戀愛。戀愛結束的時候，我獲得了成長的機會。或者說，改變的契機。我很感謝前女友給了我這次機會。她是一位天生的教育者，不是她有多成熟可以教育別人，而是她身上有絕對的善，可以照亮別人。（即使幽暗如我的人）
+變化的結果，是現在我在SNS上變得很開放，甚至有些過於開放。我終於可以表現得像我自己了，「做我自己」。一直以來我下意識的不自覺的去爲自己營造維持某些可見的不可見的人設，同時一次又一次的經歷着人設的崩塌及其帶來的痛苦。這一次終於從這個圈解脫出來。一時間有些失去坐標失去方向感的眩暈：我是誰來着？現在這個極其活躍碎嘴的人是誰？有些陌生，又特別自己。分寸感，依然沒有把握，或者說分寸感每天每刻都在變，太流動了。但除了接受這樣的自己別無他法，因爲這就是我原本的樣子。他可能毫無魅力，可能討人厭，他自說自話自娛自樂自我意識過剩，他俗，他無知，他傻逼，但他依然只能是我。
+總比撒謊好。我累了。
+
+跟前女友分手后，就沒怎麼寫過長文字了。這一兩個月，一直在微博上發一些瞬間的感想，都是很短的文字。像這樣一次性寫很多文字，一時有些不適應了，感覺有些累。以後還是應該多寫長文字。這就像長跑鍛鍊身體。
+
+我發現我蠻適合這種類似書信體一樣的寫作方式。把正在寫的文字當作寫給某個人的信。說到底，我可能還是只是想和人說話而已。
+
+
+
+2021.11.21
