--- a/_posts/2021-11-26-『開始整理照片之前這幾個月，除了日語相關，幾乎所有時間我都用在了荒野亂鬥這個遊戲上。』.md
+++ b/_posts/2021-11-26-『開始整理照片之前這幾個月，除了日語相關，幾乎所有時間我都用在了荒野亂鬥這個遊戲上。』.md
@@ -10,11 +10,12 @@ title: "『開始整理照片之前這幾個月，除了日語相關，幾乎所
 
 『開始整理照片之前這幾個月，除了日語相關，幾乎所有時間我都用在了荒野亂鬥這個遊戲上。』
 
-每次写完文字，发出去之前会重新读一遍改改错别字。之前那篇博客刚写完重读的时候，注意到上面这样一句话。
-不知道你看没看出来，我当时写的时候下意识的写成「开始整理照片之前“这”几个月」而非「开始整理照片之前“那”几个月」。
+每次寫完文字，發出去之前會重新讀一遍改改錯別字。之前那篇博客剛寫完重讀的時候，注意到上面這樣一句話。
+不知道你看沒看出來，我當時寫的時候下意識的寫成「開始整理照片之前“這”幾個月」而非「開始整理照片之前“那”幾個月」。
 
-这个「这」和「那」的用词之差，体现了ADHD的人的一个特点：任何时刻都可以瞬移到过去的任何一个时间点，然后站在那个时间点进行叙事。而这些都是下意识中不自觉完成的。「开始整理照片之前」那个时间点，已经是大半年之前的事了。但在我的思维里，它就在我身旁不到一米远的地方。
-不仅「开始整理照片之前」离我是这个距离，我的小学，我的初中高中大学以及之后的所有「过去」距离我都不到一米远。我甚至不用转过头，我的余光就能感受到它们的存在，或者，甚至眼睛都不用睁开……
+這個「這」和「那」的用詞之差，體現了ADHD的人的一個特點：任何時刻都可以瞬移到過去的任何一個時間點，然後站在那個時間點進行敘事。而這些都是下意識中不自覺完成的。「開始整理照片之前」那個時間點，已經是大半年之前的事了。但在我的思維裡，它就在我身旁不到一米遠的地方。
+不僅「開始整理照片之前」離我是這個距離，我的小學，我的初中高中大學以及之後的所有「過去」距離我都不到一米遠。我甚至不用轉過頭，我的餘光就能感受到它們的存在，或者，甚至眼睛都不用睜開……
+
 
 
 
