committed by cx

--- a/_posts/2022-06-26-「看照片聊天」的視頻.md
+++ b/_posts/2022-06-26-「看照片聊天」的視頻.md
@@ -11,7 +11,7 @@ title: "「看照片聊天」的視頻"
 
 ✦
 
-這個項目今後打算做什麽内容，目前想到的列在這裡：
+✦ ✦ ✦ 這個項目今後打算做什麽内容，目前想到的列在這裡：✦ ✦ ✦
 
 ✦
 
@@ -52,6 +52,54 @@ title: "「看照片聊天」的視頻"
 ◇直接做直播，直播全過程作爲視頻發出來
 
 ◇把有意思的部分剪輯出來（有精力的時候再說）
+
+✦
+
+✦
+
+✦
+
+✦ ✦ ✦ 爲什麽要做這個項目 ✦ ✦ ✦
+
+✦
+
+往大了說，一直以來，在自己的視野範圍内（尤其是微博、公衆號、微信群、朋友聊天等公共空間），感覺很少看到大家暢快的發表自己的意見，要麽是不屑，要麽是有方方面面的顧慮。看到國外的up主暢快的聊天，心裡感到很羡慕。於是自己也想做這樣的事。
+
+我自己是很喜歡説話的人，幾乎就是個話癆機器，話癆的特點是，説來説去大多是廢話，重複的話。我自己本身也沒什麽「需要解決的『問題』」，加上平時生活沒有社交，所以絕大多數時候都是腦内自己跟自己話癆，而且都是車軲轆話。於是爲了防止自己語言能力的進一步退化，防止老年癡呆，想强迫自己做一些「認真的説話」。
+
+而照片，可以很容易提供「説話的主題」，至少可以讓説話變得不再是無意義的空轉。
+
+還可以把「看圖説話練習」真的當作一種「練習」，把一張圖看作一道「題」，以解題的心態去嘗試圍繞其說出一些盡量不那麽無聊的話出來。作爲一種游戲，或許也是不錯的，是不容易膩的。
+
+✦
+
+有時在公共場所，能看到年輕人站在高處對著來往的行人演講，講的内容和好壞不重要，他主要是爲了鍛煉自己演講的「勇氣」。我發現做直播是類似的感覺。直播空間就類似一個虛擬的「公共空間」，做直播就類似於對著來往行人演講。作爲練習，直播或許是個很好的方式。
+
+既然是練習，質量就不會太高。所以直播過程都會錄下來，有精力的時候，再把偶爾説出的自己覺得比較有意思的比較值得一聽的部分剪輯匯總出來，做成精簡的長度合適的up主視頻。
+
+直播或看直播回放視頻的過程中，觀者如果有興趣，也可以以某種方式參與看圖説話的練習。可以在心裡自己說，也可以發到彈幕裡跟大家分享，也可以在視頻下面留評論。我也可以把彈幕或評論再讀出來分享給大家。如果能有這樣的互動肯定更好，但也隨緣。
+
+✦
+
+看「照片」聊天，而非所有圖像，首先是因爲自己以前有過若干年拍照的歷史，與照片有比較深的「緣分」，或者説牽絆。爲了邁過「拍照」這道坎，或者説「攝影」這道坎，我希望能先把自己的照片全部「說」一遍。這個過程，也是送它們成佛的過程。把它們送走了，我才能安心開始下一步的人生。
+
+照片，和文字，或者説「話語」，二者有種拮抗的關係。照片容易引出語言，但又無法被語言完全穿透。二者之間的永久張力，會讓「圖・文」這種形式不容易陷入自我重複、前定和諧。如果只有話語，很快就會變成車軲轆話。如果只有照片，沒有將語言付諸話語的「努力」，就很容易變成現在大趨勢的「快速消費」。單純的照片，對於快速消費來説是種再適合不過的媒介。微博上打開一組9圖，一張一張翻過去，總共只需要8秒鐘左右。但這種消費幾乎不會產生任何建設性價值。
+
+✦
+
+我自己現在的生活，是一種極度「媒介化」了的生活。90%的時間都是對著電腦顯示器的，無論工作還是娛樂還是社交。「顯示器媒介」、語言媒介本來就是一種簡化。照片的「『無法簡化』性」對於我這種極度簡化了生活或許可以成爲某種補充，成爲某種「『大自然』的代償物」。
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
