committed by cx

--- a/_posts/2022-06-26-「看照片聊天」的視頻.md
+++ b/_posts/2022-06-26-「看照片聊天」的視頻.md
@@ -7,7 +7,7 @@ title: "「看照片聊天」的視頻"
 
 ✦
 
-✦◇✦◇✦ 這個項目今後打算做什麽内容，目前想到的列在這裡：✦◇✦◇✦
+✦ ✦ ✦ ✦ ✦ 這個項目今後打算做什麽内容，目前想到的列在這裡：✦ ✦ ✦ ✦ ✦
 
 ✦
 
@@ -51,7 +51,7 @@ title: "「看照片聊天」的視頻"
 
 ✦
 
-✦◇✦◇✦ 爲什麽要做這個項目 ✦◇✦◇✦
+✦ ✦ ✦ ✦ ✦ 爲什麽要做這個項目 ✦ ✦ ✦ ✦ ✦
 
 ✦
 
